<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="75dp"
    android:layout_marginHorizontal="10dp"
    android:id="@+id/calendar_task_layout"
    android:layout_marginVertical="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/calendar_todoCheckBox"
            android:layout_width="0dp"
            android:layout_height="101dp"
            android:layout_weight="60"
            android:clickable="false"
            android:focusable="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="15sp"
            tool:text="Task"></CheckBox>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/calendarEditTask"
            android:layout_width="wrap_content"
            android:layout_height="113dp"
            android:layout_marginHorizontal="@dimen/cardview_default_elevation"
            android:layout_marginTop="20dp"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/todo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/calendarDeleteTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardview_default_elevation"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </LinearLayout>

</androidx.cardview.widget.CardView>