<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calendar_layout"
    tools:context=".ui.calendar.CalendarFragment">

    <LinearLayout
        android:id="@+id/Calendar_TaskList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/Calendar_CalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mcv_calendarMode="month"
            app:mcv_dateTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:mcv_tileHeight="35dp"
            app:mcv_tileWidth="0dp"></com.prolificinteractive.materialcalendarview.MaterialCalendarView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Calendar_CalendarView" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
