<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_today_24px"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_todolist"
        android:icon="@drawable/ic_list_alt_24px"
        android:title="@string/title_todolist" />
    <item
        android:id="@+id/navigation_usefullinks"
        android:icon="@drawable/ic_info_24px"
        android:title="@string/title_usefullinks" />

</menu>